--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,15 @@ a {
 a:hover {
   color: #99ff99;
 }
+
+input[type="text"],
+textarea {
+  background: transparent;
+  color: inherit;
+  border: 1px solid #666666;
+  background: #10101a;
+  padding: 0 2px;
+  font-family: inherit;
+  font-size: inherit;
+  margin: 0;
+}
